# hackathon_iplanrio

./: .dockerignore  .env  .gitignore  .tmuxp.yaml  README.md  app.Dockerfile  dashboard.Dockerfile  docker-compose.yaml  fastapi.Dockerfile  ollama.Dockerfile
app/: flake.nix  justfile  (+1 more)
dashboard/: Dockerfile  add_fake_data.py  dash.py  dashboard.Dockerfile  flake.nix  nginx.Dockerfile  nginx.conf  pyproject.toml
dashboard/.streamlit/: config.toml
dashboard/src/: styles.css
licitacaorio/: .dockerignore  Dockerfile  README.md  flake.nix  licitacaorio.Dockerfile  manage.py  nginx.Dockerfile  pyproject.toml
licitacaorio/etp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
licitacaorio/etp/migrations/: 0001_initial.py  0002_etp_status_alter_admprocess_year_and_more.py  0002_rename_reasons_etp_justification.py  0003_etp_created_at.py  0003_rename_requesting_organization_marketresearch_requester.py  0004_etp_concluded_at_etp_previous_status_etp_updated_at_and_more.py
licitacaorio/licitacaorio/: settings.py  types.py  urls.py  utils.py  validators.py  views.py  wsgi.py
licitacaorio/static/css/: style.css
licitacaorio/static/js/: toggle_theme.js
licitacaorio/templates/: empty.html  home.html  index.html  layout.html
licitacaorio/templates/etp/: etp.html  list.html  ok.html
licitacaorio/templates/etp/adm_process/: index.html
licitacaorio/templates/etp/contract_estimate/: index.html
licitacaorio/templates/etp/etp/: index.html
licitacaorio/templates/etp/installment/: index.html
licitacaorio/templates/etp/market_research/: index.html
licitacaorio/templates/tr/: list.html
licitacaorio/templates/users/: create.html  login.html  success.html  update.html
licitacaorio/tr/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
licitacaorio/tr/migrations/: 0001_initial.py  0002_alter_riskmatrix_mitigation.py  0003_alter_riskmatrix_impact_alter_riskmatrix_probability.py  0004_alter_riskmatrix_tr.py  0005_alter_riskmatrix_impact_alter_riskmatrix_probability.py  0006_tr_created_at_tr_status.py  0007_tr_concluded_at_tr_previous_status_tr_updated_at_and_more.py
licitacaorio/users/: apps.py  forms.py  urls.py  utils.py  views.py
(+42 files in other folders)
