[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django-money>=3.5.3",
  "django>=5.1.2",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pymongo>=4.10.1",
  "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.18.3",
    "django-extensions>=3.2.3",
    "django-stubs>=5.1.0",
    "ipython>=8.28.0",
    "pygraphviz>=1.14",
    "ruff>=0.6.9",
    "werkzeug>=3.0.4",
]

[tool.basedpyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
reportIncompatibleVariableOverride = false
reportAttributeAccessIssue = false

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
include = ["\\.pyi?$"]
exclude = [".git", ".ruff_cache", "__pycache__", ".github"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
  "ANN101",  # missing type annotation for self in method
  "ARG001",  # unused function argument
  "D100",    # missing docstring in public module
  "D103",    # missing docstring in public function
  "D203",    # 1 blank line required before class docstring
  "D212",    # multiline summary in first line
  "D104",    # missing docstring in public package
  "PLR0913", # too many arguments in function definition
  "S603",    # subprocess call - check for execution of untrusted input
  "T201",    # print statement used in code
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.djlint]
indent = 4
blank_line_before_tag = "load,extends,include,block"
